# emby-keeper

./: .gitignore  README.md  config.example.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-dev.yml  docker.yml
deploy/: docker-compose.example.yml  docker-compose.fnos.yml
docs/guide/: 功能说明-日志推送.md  配置文件.md
embykeeper/: __init__.py  cli.py  config.py  notify.py  schema.py  utils.py
embykeeper/telegram/: checkin_main.py  dynamic.py  link.py  log.py
embykeeper/telegram/checkiner/: __init__.py  _base.py  _templ_ai.py  _templ_c.py  mooncake_ai.py
embykeeperweb/: app.py
scripts/: docker-entrypoint.sh
tests/: test_checkiner_site_schedule.py  test_config_reload.py  test_docker_startup.py  test_mooncake_ai.py  test_template_c_group_checkin.py
