[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "embykeeper"
version = "7.6.1"
authors = [
    {name = "jackzzs", email = "jackzzs@outlook.com"},
]
description = "Daily checkin automator for emby bots in telegram."
keywords = [
    "emby",
    "telegram",
    "checkin",
    "automator",
    "bot",
    "telegram bot",
    "keep active",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: Chinese (Simplified)",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml",
    "tomli",
    "tomlkit",
    "rich",
    "typer",
    "appdirs",
    "loguru",
    "faker",
    "aiofiles",
    "python-dateutil",
    "ddddocrfix>=1.5.5",
    "kurigram==2.2.12",
    "tgcrypto",
    "pillow>10.0.0",
    "thefuzz[speedup]",
    "aiocache",
    "flask==3.0.3",
    "flask-socketio==5.3.6",
    "flask-login==0.6.3",
    "simple-websocket",
    "eventlet",
    "cryptography",
    "werkzeug==3.0.3",
    "cachetools",
    "emoji",
    "numpy<2.0.0",
    "httpx[http2]",
    "socksio",
    "telethon",
    "psutil",
    "xpinyin",
    "curl_cffi",
    "pymongo",
    "pydantic",
    "watchfiles",
    "python-socks[asyncio]",
    "apprise",
    "fastapi",
    "uvicorn[standard]",
    "openai",
]

[project.urls]
Homepage = "https://github.com/emby-keeper/emby-keeper"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
embykeeper = "embykeeper.cli:app"
embykeeperweb = "embykeeperweb.app:cli"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.black]
line-length = 110
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/config.example.toml
  # | .*.toml
)
'''
